<resources>
    <string name="app_name">Status Stories</string>
    <string name="once_upon_a_time">Once upon a time…</string>
    <string name="story_duration">Story duration</string>
    <string name="is_text_progress_enabled">Is text progress enabled?</string>
    <string name="is_immersive_enabled">Is immersive enabled?</string>
    <string name="is_cache_enabled">Is cache enabled?</string>
</resources>
